[gd_scene load_steps=3 format=3 uid="uid://cryi2a8hbxays"]

[ext_resource type="Script" path="res://scratchpad.gd" id="1_4v50l"]
[ext_resource type="Texture2D" uid="uid://u8fjo4f1vext" path="res://bounding.png" id="2_60ihp"]

[node name="Scratchpad" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4v50l")

[node name="DebugBackground" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.18359, 0.18359, 0.18359, 1)

[node name="ButtonContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -140.0
offset_right = 150.0
offset_bottom = 160.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 100
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="ButtonContainer"]
position = Vector2(168, 154)
scale = Vector2(2, 2)
texture = ExtResource("2_60ihp")

[node name="ButtonBox" type="VBoxContainer" parent="ButtonContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="ButtonContainer/ButtonBox"]
layout_mode = 2
mouse_filter = 1
text = "Colour"

[node name="EraseButton" type="Button" parent="ButtonContainer/ButtonBox"]
visible = false
layout_mode = 2
mouse_filter = 1
text = "Erase"

[node name="ClearButton" type="Button" parent="ButtonContainer/ButtonBox"]
layout_mode = 2
mouse_filter = 1
text = "Clear"

[connection signal="mouse_entered" from="ButtonContainer" to="." method="_pop_out_control"]
[connection signal="mouse_exited" from="ButtonContainer" to="." method="_pop_in_control"]
[connection signal="pressed" from="ButtonContainer/ButtonBox/EraseButton" to="." method="undo_last"]
[connection signal="pressed" from="ButtonContainer/ButtonBox/ClearButton" to="." method="clear_page"]
